--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,11 @@ serde_json = "1"
 tracing = "0.1"
 # tidy-alphabetical-end
 
-
 [build-dependencies]
 # tidy-alphabetical-start
 # `cc` updates often break things, so we pin it here.
 cc = "=1.2.16"
+cmake = "=0.1.54"
 # tidy-alphabetical-end
 
 [features]
