--- a/scripts/abi-cafe-rules.toml
+++ b/scripts/abi-cafe-rules.toml
@@ -4,7 +4,7 @@
 [target.'cfg(all(target_arch = "aarch64", target_os = "macos"))']
 'SingleVariantUnion::conv_c::repr_c'.busted = "check"
 'OptionU128::conv_rust::repr_c::rustc_caller'.busted = "run"
-'OptionU128::conv_rust::repr_c::cgclif_caller'.busted = "check"
+'OptionU128::conv_rust::repr_c::cgtpde_caller'.busted = "check"
 
 [target.'cfg(all(target_arch = "x86_64", windows))']
 'simple::conv_rust'.busted = "check"
