--- a/tpde/tpde-llvm/CMakeLists.txt
+++ b/tpde/tpde-llvm/CMakeLists.txt
@@ -129,9 +129,11 @@ add_custom_command(
     COMMAND tpde_encodegen
         -o ${CMAKE_CURRENT_BINARY_DIR}/encode_template_x64.hpp
         ${CMAKE_CURRENT_BINARY_DIR}/encode_template_x64.bc
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/encode_template.ll
     DEPENDS
         tpde_encodegen
         ${CMAKE_CURRENT_BINARY_DIR}/encode_template_x64.bc
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/encode_template.ll
 )
 
 target_compile_definitions(tpde_llvm PRIVATE TPDE_LLVM_X64)
@@ -165,9 +167,11 @@ add_custom_command(
     COMMAND tpde_encodegen
         -o ${CMAKE_CURRENT_BINARY_DIR}/encode_template_arm64.hpp
         ${CMAKE_CURRENT_BINARY_DIR}/encode_template_arm64.bc
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/encode_template.ll
     DEPENDS
         tpde_encodegen
         ${CMAKE_CURRENT_BINARY_DIR}/encode_template_arm64.bc
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/encode_template.ll
 )
 
 target_compile_definitions(tpde_llvm PRIVATE TPDE_LLVM_ARM64)
