--- a/build_system/Cargo.toml
+++ b/build_system/Cargo.toml
@@ -16,4 +16,5 @@ unstable-features = [] # for rust-analyzer
 debug = 1
 
 [dependencies]
+clap = { version = "4.5.53", features = ["derive"] }
 pathsearch = "0.2.0"
