--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["dylib"]
 # tidy-alphabetical-start
 cc = "1.2.16"
 cmake = "0.1.54"
+rustc_version = "0.4.1"
 # tidy-alphabetical-end
 
 [features]
